[flake8]
ignore = D401
max-line-length=100

[metadata]
url = https://github.com/libris/xl_auth#readme
name = xl_auth
version = 0.7.7
license = Apache-2.0
author = Libris
author_email = libris@kb.se
description = Authorization and OAuth2 provider for LibrisXL
long_description = file: README.rst
keywords = kb, libris, oauth2
# https://pypi.python.org/pypi?:action=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Framework :: Flask
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 2.7

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    alembic==0.9.5
    Babel==2.5.1
    bcrypt==3.1.4
    blinker==1.4
    certifi==2018.1.18
    cffi==1.11.4
    chardet==3.0.4
    click==6.7
    cssselect==1.0.3
    cssutils==1.0.2
    emails==0.5.15
    Flask==0.12.2
    Flask-Babel==0.11.2
    Flask-Bcrypt==0.7.1
    Flask-Caching==1.3.3
    Flask-DebugToolbar==0.10.1
    flask-emails==0.4
    Flask-Login==0.4.0
    Flask-Migrate==2.1.1
    Flask-OAuthlib==0.9.4
    Flask-SQLAlchemy==2.2
    Flask-Webpack==0.1.0
    Flask-WTF==0.14.2
    futures==3.1.1
    gunicorn==19.7.1
    idna==2.6
    itsdangerous==0.24
    Jinja2==2.9.6
    lxml==4.1.1
    Mako==1.0.7
    MarkupSafe==1.0
    oauthlib==2.0.6
    premailer==3.1.1
    psycopg2==2.7.3.1
    pycparser==2.18
    python-dateutil==2.6.1
    python-editor==1.0.3
    pytz==2017.2
    requests==2.18.4
    requests-oauthlib==0.8.0
    sh==1.12.14
    six==1.10.0
    SQLAlchemy==1.1.14
    urllib3==1.22
    Werkzeug==0.12.2
    WTForms
    WTForms-fork-20180213

[options.packages.find]
include=
    xl_auth

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[bdist_rpm]
vendor=National Library of Sweden
packager=Libris XL <libris@kb.se>
release=1.el7
force_arch=x86_64
distribution_name=CentOS 7

requires=
    python-pip

install_script=bdist_rpm/install-script.sh

post_install=bdist_rpm/post-install.sh
